--- a/index.html
+++ b/index.html
@@ -2,45 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>ScholarHaven.io</title>
+  <link rel="icon" href="https://fav.farm/📚">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ScholarHaven</title>
   <style>
     body {
       font-family: system-ui, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9fafb;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-    h1 {
-      font-size: 3rem;
-      color: #222;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #444;
-      max-width: 600px;
       text-align: center;
+      padding: 60px 20px;
+      background: #f9fafb;
+      color: #333;
     }
     .cta {
-      margin-top: 2rem;
       padding: 12px 24px;
       background: #4f46e5;
       color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
       text-decoration: none;
+      border-radius: 8px;
+      margin-top: 2rem;
+      display: inline-block;
+    }
+    footer {
+      margin-top: 80px;
+      font-size: 0.9rem;
+      color: #999;
     }
   </style>
 </head>
 <body>
-  <h1>ScholarHaven</h1>
-  <p>A safe space for students, researchers, and mentors to connect, grow, and thrive in academia and beyond.</p>
+  <h1>ScholarHaven.io</h1>
+  <p>A safe space for students and mentors to grow, connect, and thrive in academia.</p>
   <a class="cta" href="https://github.com/nitish-nagesh/scholarhaven" target="_blank">View on GitHub</a>
+
+  <footer>
+    © 2025 ScholarHaven.io · Built with love on GitHub Pages
+  </footer>
 </body>
 </html>
