--- a/index.html
+++ b/index.html
@@ -2,28 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ScholarHaven.io</title>
   <link rel="icon" href="https://fav.farm/📚">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
       font-family: system-ui, sans-serif;
-      text-align: center;
-      padding: 60px 20px;
+      margin: 0;
+      padding: 0;
       background: #f9fafb;
-      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+    }
+    h1 {
+      font-size: 3rem;
+      color: #222;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #444;
+      max-width: 600px;
+      text-align: center;
+      margin-bottom: 2rem;
     }
     .cta {
+      margin-top: 1rem;
       padding: 12px 24px;
       background: #4f46e5;
       color: white;
-      text-decoration: none;
+      border: none;
       border-radius: 8px;
-      margin-top: 2rem;
-      display: inline-block;
+      font-size: 1rem;
+      text-decoration: none;
     }
     footer {
-      margin-top: 80px;
+      position: fixed;
+      bottom: 20px;
+      text-align: center;
       font-size: 0.9rem;
       color: #999;
     }
@@ -31,7 +50,7 @@
 </head>
 <body>
   <h1>ScholarHaven.io</h1>
-  <p>A safe space for students and mentors to grow, connect, and thrive in academia.</p>
+  <p>A safe space for students, mentors, and researchers to connect, grow, and thrive in academia.</p>
   <a class="cta" href="https://github.com/nitish-nagesh/scholarhaven" target="_blank">View on GitHub</a>
 
   <footer>
