--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   </style>
 </head>
 <body>
+  <div style="text-align: center;">
+    <img src="logo01.png" alt="ScholarHaven.io Logo" style="height: 80px; margin-bottom: 20px;" />
+  </div>
   <h1>ScholarHaven.io</h1>
   <p>A safe space for students, mentors, and researchers to connect, grow, and thrive in academia.</p>
   <a class="cta" href="https://github.com/nitish-nagesh/scholarhaven" target="_blank">View on GitHub</a>
